<resources>
    <string name="app_name">PopularMovies</string>
    <string name="main_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="poster_movies_API_KEY">INSERT API KEY</string>
    <string name="content_movie_detail_plot">Synopsis:</string>
    <string name="content_movie_detail_plot_overview">Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.</string>
    <string name="content_movie_detail_rating_title">User Rating:</string>
    <string name="content_movie_detail_rating">8.9</string>
    <string name="content_movie_detail_release_title">Released:</string>
    <string name="content_movie_detail_release_date">12-12-15</string>
    <string name="content_movie_detail_review">User Reviews:</string>
    <string name="content_movie_detail_review_num">0</string>
    <string name="movie_review_author">BY:</string>
    <string name="movie_review_content">I\'ve seen this movie and I\'m very impressed and no lie Leonardo has done a magnificent job playing his role has a vengeful father. This movie has some things to teach everyone what they shouldn\'t do and also it was worthwhile watching. Bring your family and friends to see this movie. I promise you, you will not regret a second watching the story play</string>
    <string name="movie_detail_review_header">REVIEWS</string>
    <string name="movie_detail_trailer_header">TRAILERS</string>
    <string name="favorite_movies">Favorites</string>
</resources>
