<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sanstormsolutions.com.popularmovies.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/content_movie_detail_imgvPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/content_movie_detail_txtvRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/content_movie_detail_imgvPoster"
                android:text="@string/content_movie_detail_release_title"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/content_movie_detail_txtvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/content_movie_detail_txtvRelease"
                android:text="@string/content_movie_detail_release_date" />


            <TextView
                android:id="@+id/content_movie_detail_txtvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/content_movie_detail_txtvRelease"
                android:layout_below="@+id/content_movie_detail_txtvRelease"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/content_movie_detail_rating_title"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/content_movie_detail_txtvUserRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content_movie_detail_txtvRelease"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/content_movie_detail_txtvRating"
                android:text="@string/content_movie_detail_rating"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/content_movie_detail_txtvReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/content_movie_detail_txtvRating"
                android:layout_below="@+id/content_movie_detail_txtvRating"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/content_movie_detail_review"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/content_movie_detail_txtvReviewNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content_movie_detail_txtvRating"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/content_movie_detail_txtvReviews"
                android:text="@string/content_movie_detail_review_num"
                android:textSize="@dimen/abc_text_size_medium_material" />

        </RelativeLayout>

        <TextView
            android:id="@+id/content_movie_detail_txtvPlot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_movie_detail_imgvPoster"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/content_movie_detail_plot"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/content_movie_detail_txtvMovieOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_movie_detail_txtvPlot"
            android:layout_marginTop="10dp"
            android:text="@string/content_movie_detail_plot_overview" />

        <LinearLayout
            android:id="@+id/content_movie_detail_llTrailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/content_movie_detail_txtvTrailerHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_trailer_header"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold|italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/content_movie_detail_rvVideos"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

